# rag_bench

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
chinese_simpleqa_rag/: README.md
gen_qa/: env.example  generate_qa.py
gen_qa/graphgen_config_tpl/: aggregated_config.yaml  atomic_config.yaml  cot_config.yaml  multi_hop_config.yaml
prospectus_qa/: README.md
prospectus_qa/baseline/: doc_process.py  evaluation.py  manual_judge.py  qa.py  requirements.txt
prospectus_qa/data/: dev.yaml
rag_bench/: generate_qa.py
rag_bench/baseline/: env.template  gradio_judge.py  gradio_judge_design.md  index.py  test_evaluation.py  utils.py
rag_bench/data/caibao/: README.md
rag_bench/data/chinese_simpleqa/: README.md
